--- a/package.json
+++ b/package.json
@@ -11,17 +11,29 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.0.6",
+    "@angular/cdk": "^20.0.5",
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
     "@angular/forms": "^20.0.0",
+    "@angular/material": "^20.0.5",
     "@angular/platform-browser": "^20.0.0",
     "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.3",
+    "@types/chart.js": "^4.0.1",
+    "apexcharts": "^4.7.0",
+    "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "express": "^5.1.0",
+    "jest": "^30.0.4",
+    "lucide-angular": "^0.525.0",
+    "ng-apexcharts": "^1.16.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
     "@angular/build": "^20.0.3",
